Fix hover issues on dark mode

--- a/src/_sass/dark.scss
+++ b/src/_sass/dark.scss
@@ -38,5 +38,9 @@ $color3: #0062d3;
         border-radius: 6px;
     }
 
+    .sidebar-content a:hover {
+        filter: brightness(20%) contrast(80%);
+    }
+
     @import "theme";
 }
